[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/sEnemyR_strip4.png" type="Texture" id=1]
[ext_resource path="res://objects/enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/sGun.png" type="Texture" id=3]
[ext_resource path="res://objects/enemy_gun.gd" type="Script" id=4]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 flash_color : hint_color = vec4(1.0);
uniform float flash_modifier : hint_range(0.0, 1.0) = 0.0;

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	color.rgb = mix(color.rgb, flash_color.rgb, flash_modifier);
	COLOR = color;
}
"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "run",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 10.6809, 22.0252 )

[sub_resource type="SegmentShape2D" id=9]
b = Vector2( 13, 0 )

[sub_resource type="Animation" id=10]
resource_name = "flash"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0, 1.0, 0.0 ]
}

[sub_resource type="CapsuleShape2D" id=11]
radius = 14.963
height = 16.5738

[node name="enemy" type="KinematicBody2D"]
collision_layer = 2147483649
collision_mask = 2147483649
script = ExtResource( 2 )

[node name="sprite" type="AnimatedSprite" parent="."]
material = SubResource( 2 )
frames = SubResource( 7 )
animation = "run"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
self_modulate = Color( 0.737255, 0.00784314, 0.776471, 1 )
position = Vector2( 0, 2 )
shape = SubResource( 8 )

[node name="obj_detect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="obj_detect"]
shape = SubResource( 9 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/flash = SubResource( 10 )

[node name="hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
self_modulate = Color( 0.403922, 0.0588235, 0.0588235, 1 )
shape = SubResource( 11 )

[node name="gun" type="Sprite" parent="."]
position = Vector2( 0, 10 )
texture = ExtResource( 3 )
offset = Vector2( 2.5, 0 )
script = ExtResource( 4 )

[node name="muzzle" type="Position2D" parent="gun"]
[connection signal="body_entered" from="obj_detect" to="." method="_on_obj_detect_body_entered"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
